# hungary-population-monitor

./: .gitignore  README.md  pyproject.toml
data/geo/: hungary_counties.geojson
data/raw/coordinates/: HU.txt
docs/notebooks/: 01_data_profile_population.html  02_data_profile_geonames.html  03_integration_validation_pop_geonames.html
docs/notebooks/data_profile/: 01_population.html  02_data_profile_geonames.html  02_geonames.html  03_integration_validation.html  03_integration_validation_pop_geonames.html
notebooks/: 02_data_profile_geonames.ipynb  03_integration_validation_pop_geonames.ipynb
notebooks/data_profile/: 01_population.ipynb  02_geonames.ipynb  03_integration_validation.ipynb
scripts/: export_notebooks.ps1  fetch_county_boundaries.py
src/: data_collection.py  settings.py
src/hpm/: __init__.py  cli.py  pipeline.py  settings.py
src/hpm/analysis/: change.py  datasets.py  facts.py  geography.py  overview.py  settlements.py
src/hpm/bootstrap/: __init__.py  prepare.py
src/hpm/data_collection/: __init__.py  population_data.py  settlement_data.py
src/hpm/db/: __init__.py  connection.py  sqlite.py
src/hpm/etl/: __init__.py  pipeline.py
src/hpm/load/: __init__.py  sqlite_loader.py
src/hpm/semantics/: __init__.py  loader.py  schema.sql
src/hpm/transform/: __init__.py  population.py  settlement.py  star_schema.py  (+1 more)
streamlit_app/: app.py  shared.py
streamlit_app/data/: hpm.db
streamlit_app/pages/: explorer.py  fun_facts.py  geography.py  insights.py  map.py  overview.py  trends.py  winners_losers.py
streamlit_app/utils/: data.py
(+11 files in other folders)
