[project]
name = "hungary-population-monitor"
version = "0.1.0"
description = "Automated data pipeline for Hungarian settlement-level population statistics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "David Danka"}]
dependencies = [
    "beautifulsoup4 == 4.15.0",
    "numpy == 2.4.6",
    "openpyxl == 3.1.5",
    "pandas == 3.0.3",
    "requests == 2.34.2",
    "xlrd == 2.0.2"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]